Added Experience nav bar link.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<ul>
 						<a href="#stack"><li>Tech Stack</li></a>
 						<a href="#projects"><li>Projects</li></a>
-						<!-- <a href="#experience"><li>Work Experience</li></a> -->
+						<a href="#experience"><li>Work Experience</li></a>
 						<a href="#contact"><li>Contact</li></a>
 					</ul>
 				</nav>
