Updated github link to project (Attendify).

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 								A platform designed to track and manage attendance records efficiently, featuring QR code integration for quick attendance marking and an anti-proxy attendance feature.
 							</p>
 
-							<a href="https://pollpe.com/" class="project-btn" target="_blank"
+							<a href="https://github.com/hsbhatra/Attendify" class="project-btn" target="_blank"
 								>Check GitHub Repository</a
 							>
 						</div>
