Image slideshow added to project section.

--- a/index.html
+++ b/index.html
@@ -315,11 +315,16 @@
 
 				<div class="projects-content">
 					<div class="project" data-aos="zoom-in" data-aos-delay="300">
-						<img
-							src="assets/images/attendify-1.png"
-							alt="project 1"
-							class="img-fluid"
-						/>
+						<!-- Image Carousel -->
+						<div class="carousel">
+						  	<img src="assets/images/attendify-1.png" class="carousel-img active" alt="Slide 1" />
+						  	<img src="assets/images/attendify-2.png" class="carousel-img" alt="Slide 2" />
+						  	<img src="assets/images/attendify-3.png" class="carousel-img" alt="Slide 3" />
+						  
+						  	<!-- Navigation Buttons -->
+						  	<button class="carousel-btn prev">&#10094;</button>
+						  	<button class="carousel-btn next">&#10095;</button>
+						</div>
 
 						<div class="project-info">
 							<span class="tags"
