Added image preview feature with slideshow. Also added new images for projects.

--- a/index.html
+++ b/index.html
@@ -317,9 +317,18 @@
 					<div class="project" data-aos="zoom-in" data-aos-delay="300">
 						<!-- Image Carousel -->
 						<div class="carousel">
-						  	<img src="assets/images/attendify-1.png" class="carousel-img active" alt="Slide 1" />
-						  	<img src="assets/images/attendify-2.png" class="carousel-img" alt="Slide 2" />
-						  	<img src="assets/images/attendify-3.png" class="carousel-img" alt="Slide 3" />
+						  	<img src="assets/images/projects/attendify/home.png" class="carousel-img active" alt="Slide 1" />
+						  	<img src="assets/images/projects/attendify/profile.png" class="carousel-img active" alt="Slide 1" />
+						  	<img src="assets/images/projects/attendify/register.png" class="carousel-img active" alt="Slide 1" />
+						  	<img src="assets/images/projects/attendify/login.png" class="carousel-img active" alt="Slide 1" />
+						  	<img src="assets/images/projects/attendify/about.png" class="carousel-img active" alt="Slide 1" />
+						  	<img src="assets/images/projects/attendify/services.png" class="carousel-img active" alt="Slide 1" />
+						  	<img src="assets/images/projects/attendify/leave-application-form.png" class="carousel-img active" alt="Slide 1" />
+						  	<img src="assets/images/projects/attendify/dynamic-qr-code.png" class="carousel-img active" alt="Slide 1" />
+						  	<img src="assets/images/projects/attendify/dashboard.png" class="carousel-img active" alt="Slide 1" />
+						  	<img src="assets/images/projects/attendify/valid-qr-code.png" class="carousel-img active" alt="Slide 1" />
+						  	<img src="assets/images/projects/attendify/invalid-qr-code.png" class="carousel-img active" alt="Slide 1" />
+						  	<img src="assets/images/projects/attendify/attendance-records.png" class="carousel-img active" alt="Slide 1" />
 						  
 						  	<!-- Navigation Buttons -->
 						  	<button class="carousel-btn prev">&#10094;</button>
@@ -342,11 +351,17 @@
 					</div>
 
 					<div class="project" data-aos="zoom-in" data-aos-delay="400">
-						<img
-							src="assets/images/quiz-lok-2.png"
-							alt="project 2"
-							class="img-fluid"
-						/>
+						<!-- Image Carousel -->
+						<div class="carousel">
+							<img src="assets/images/projects/quiz-lok/home.png" class="carousel-img active" alt="Slide 1" />
+							<img src="assets/images/projects/quiz-lok/question.png" class="carousel-img active" alt="Slide 1" />
+							<img src="assets/images/projects/quiz-lok/save-highscore.png" class="carousel-img active" alt="Slide 1" />
+							<img src="assets/images/projects/quiz-lok/highscores.png" class="carousel-img active" alt="Slide 1" />
+						
+							<!-- Navigation Buttons -->
+							<button class="carousel-btn prev">&#10094;</button>
+							<button class="carousel-btn next">&#10095;</button>
+					  </div>
 
 						<div class="project-info">
 							<span class="tags"
@@ -364,50 +379,6 @@
 							>
 						</div>
 					</div>
-
-					<!-- <div class="project" data-aos="zoom-in" data-aos-delay="500">
-						<img
-							src="assets/images/project3.png"
-							alt="project 3"
-							class="img-fluid"
-						/>
-
-						<div class="project-info">
-							<span class="tags"
-								>NextJS • TypeScript • NodeJS • Nodemailer</span
-							>
-							<h4>Physiva - Heal, Restore, Thrive</h4>
-							<p>
-								A physiotherapy platform that allows users to book appointments
-								via call or WhatsApp and request callbacks for personalized
-								treatment and recovery plans.
-							</p>
-							<a href="https://physiva.in/" class="project-btn" target="_blank"
-								>Check Live Site</a
-							>
-						</div>
-					</div> -->
-
-					<!-- <div class="project" data-aos="zoom-in" data-aos-delay="500">
-						<img
-							src="assets/images/project4.png"
-							alt="project 4"
-							class="img-fluid"
-						/>
-
-						<div class="project-info">
-							<span class="tags">HTML • CSS • JavaScript • Bootstrap</span>
-							<h4>PollPe - Earn Rewards For Opinion</h4>
-							<p>
-								An app where users can participate in surveys and share their
-								opinions, earning rewards and incentives for their valuable
-								feedback and insights.
-							</p>
-							<a href="https://pollpe.in/" class="project-btn" target="_blank"
-								>Check Live Site</a
-							>
-						</div>
-					</div> -->
 				</div>
 			</div>
 		</section>
@@ -542,6 +513,15 @@
 				</div>
 			</div>
 		</footer>
+
+		<!-- Image Preview Modal -->
+		<div id="imagePreviewModal" class="image-preview-modal">
+			<span class="close-btn">&times;</span> <!-- Cross button -->
+			<img class="preview-img" src="" alt="Preview">
+			<!-- Navigation buttons -->
+			<button class="modal-prev">&#10094;</button>
+			<button class="modal-next">&#10095;</button>
+		</div>
 
 		<!-- AOS CDN Link -->
 		<script
