Added a warning message for projects not deployed yet!

--- a/index.html
+++ b/index.html
@@ -345,8 +345,17 @@
 							</p>
 
 							<a href="https://github.com/hsbhatra/Attendify" class="project-btn" target="_blank"
-								>Check GitHub Repository</a
+								>Check GitHub Repo</a
 							>
+							<p style="color: red; margin-top: 25px"><i>
+								This web-app is not deployed yet!
+							</i></p>
+							<!-- <a
+								href="not-live.html"
+								class="project-btn"
+								target="_blank"
+								>Check Live Site</a
+							> -->
 						</div>
 					</div>
 
@@ -371,6 +380,9 @@
 							<p>
 								A quiz game platform where users can test their knowledge on various topics, featuring interactive questions and real-time scoring powered by HTML, CSS, JavaScript, and Bootstrap.
 							</p>
+							<a href="https://github.com/hsbhatra/Quiz-Lok" class="project-btn" target="_blank"
+								>Check GitHub Repo</a
+							>
 							<a
 								href="https://quiz-lok.netlify.app/"
 								class="project-btn"
