--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					
 					<!-- Download Resume -->
 					<a
-						href="assets/doc/Himanshu_Sharma's_Resume.pdf"
+						href="assets/doc/Himanshu_Sharma_Resume.pdf"
 						class="primary-button"
 						data-aos="fade-up"
 						data-aos-delay="400"
